--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,11 +1,12 @@
 body{
-  background-color: #ECECEC;
+  background-color: #ECECEC!important;
   margin: 0;
 }
 
 .box{
-  width: 800px;
-  height: 500px;
+  padding: 10px;
+  width: 1400px;
+  height: 800px;
   background-color: #fff;
   border-radius: 10px;
   position: absolute;
@@ -13,6 +14,22 @@ body{
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
+  overflow: auto;
+}
+
+.box::-webkit-scrollbar {
+  width: 14px;  /* 스크롤바의 너비 */
+}
+
+.box::-webkit-scrollbar-thumb {
+  height: 30%; /* 스크롤바의 길이 */
+  background: #ff8a4781; /* 스크롤바의 색상 */
+  border-radius: 10px;
+}
+
+.box::-webkit-scrollbar-track {
+  background: #ffe39da1;  /*스크롤바 뒷 배경 색상*/
+  border-radius: 10px;
 }
 
 
@@ -42,6 +59,23 @@ body{
 a{
   margin: 30px;
   float: right;
-  text-decoration: none;
-  color: #828282;
+  text-decoration: none!important;
+  color: #828282!important;
 }
+
+.card{
+  width: 18rem; 
+  height:340px; 
+  background:#EFBC3A!important; 
+  float: left;
+  margin:20px 0px 0px 20px;
+}
+
+.btn-primary {
+  margin:4px;
+  background-color: #B24000!important;
+  border: #B24000!important;
+  color:#fff!important;
+}
+
+
