--- a/views/shop.pug
+++ b/views/shop.pug
@@ -3,22 +3,36 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/shop.css')
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
   body
     block content
       .box
-        img.header(src="../images/logo2.png")
+        .logobox
+          img#logo(src="../images/logo2.png")
         .menu
-        
-          .hello
-            .hi
-            .hi
-            .hi
-            .hi
-            .hi
-            .hi
-            .hi
-            .hi
+          ul.nav.nav-pills.mb-3#pills-tab(role='tablist')
+            li.nav-item(role="presentation")
+              button#pills-home-tab.nav-link.active(data-bs-toggle='pill' data-bs-target='#pills-home' type='button' role='tab' aria-controls='pills-home' aria-selected='true') Burger
+            li.nav-item(role='presentation')
+              button#pills-profile-tab.nav-link(data-bs-toggle='pill' data-bs-target='#pills-profile' type='button' role='tab' aria-controls='pills-profile' aria-selected='false') Drink
+            li.nav-item(role='presentation')
+                button#pills-contact-tab.nav-link(data-bs-toggle='pill' data-bs-target='#pills-contact' type='button' role='tab' aria-controls='pills-contact' aria-selected='false') Side
+
+          #pills-tabContent.tab-content
+          #pills-home.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='pills-home-tab' tabindex='0') 
+            .hello
+              .hi
+              .hi
+              .hi
+              .hi
+              .hi
+              .hi
+              .hi
+              .hi
+          #pills-profile.tab-pane.fade(role='tabpanel' aria-labelledby='pills-profile-tab' tabindex='0') ...
+          #pills-contact.tab-pane.fade(role='tabpanel' aria-labelledby='pills-contact-tab' tabindex='0') ...
+
 
         .cart
           .cartbtn cart
@@ -26,7 +40,7 @@ html
             p.p 주문 금액 :
             p.color 17000
           
-        .btn
+        .btnnn
           a(href="/") 
             button.cb.cancel 취소
           button.cb.cash 결제
