--- a/views/menu.pug
+++ b/views/menu.pug
@@ -18,7 +18,78 @@ html
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+          
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+
+        .card
+          img.card-img-top(src='../images/king.png' style='height:200px')
+          .card-body
+            h5.card-title 불고기 버거
+            p.card-text 4000월
+            .edit
+              a.btn.btn-primary(href='#') 삭제
+              a.btn.btn-primary(href='#') 수정
+
+          
         
-        .plus-box
-          img.plus-img(src="../images/plus.png")
-          img.plus-txt(src="../images/Group.png")
+      .plus-box
+        img.plus-img(src="../images/plus.png" href="")
+        img.plus-txt(src="../images/Group.png")
