--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -5,8 +5,8 @@ body{
 
 .box{
   padding: 10px;
-  width: 1400px;
-  height: 800px;
+  width: 1346px;
+  height: 760px;
   background-color: #fff;
   border-radius: 10px;
   position: absolute;
@@ -34,21 +34,22 @@ body{
 
 
 .plus-box{
-  position: absolute;
-  right: 4%;
+  position: fixed;
+  right: 2%;
   bottom: 4%;
 }
 
 .plus-img{
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   float: right;
 }
 
 
 .plus-txt{
+  width: 140px;
   margin-top: 20px;
-  margin-right: 4px;
+  margin-right: 6px;
   display: none;
 }
 
@@ -68,7 +69,7 @@ a{
   height:340px; 
   background:#EFBC3A!important; 
   float: left;
-  margin:20px 0px 0px 20px;
+  margin:20px;
 }
 
 .btn-primary {
