--- a/views/menu.pug
+++ b/views/menu.pug
@@ -89,7 +89,7 @@ html
               a.btn.btn-primary(href='#') 수정
 
           
-        
-      .plus-box
-        img.plus-img(src="../images/plus.png" href="")
-        img.plus-txt(src="../images/Group.png")
+      a(href="/plus")
+        .plus-box
+          img.plus-img(src="../images/plus.png")
+          img.plus-txt(src="../images/Group.png")
