--- a/views/menu.pug
+++ b/views/menu.pug
@@ -13,32 +13,24 @@ html
         .card
           img.card-img-top(src='../images/king.png' style='height:200px')
           .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
+            h5.card-title 버거
+            p.card-text 4000원
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
         .card
           img.card-img-top(src='../images/king.png' style='height:200px')
           .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
+            h5.card-title 싸이버거
+            p.card-text 4000원
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
         .card
           img.card-img-top(src='../images/king.png' style='height:200px')
           .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
-            .edit
-              a.btn.btn-primary(href='#') 삭제
-              a.btn.btn-primary(href='#') 수정
-        .card
-          img.card-img-top(src='../images/king.png' style='height:200px')
-          .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
+            h5.card-title 불고기버거
+            p.card-text 4000원
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
@@ -46,17 +38,8 @@ html
         .card
           img.card-img-top(src='../images/king.png' style='height:200px')
           .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
-            .edit
-              a.btn.btn-primary(href='#') 삭제
-              a.btn.btn-primary(href='#') 수정
-          
-        .card
-          img.card-img-top(src='../images/king.png' style='height:200px')
-          .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
+            h5.card-title 새우버거
+            p.card-text 4000원
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
@@ -64,8 +47,8 @@ html
         .card
           img.card-img-top(src='../images/king.png' style='height:200px')
           .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
+            h5.card-title 킹버거
+            p.card-text 4000원
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
@@ -73,23 +56,18 @@ html
         .card
           img.card-img-top(src='../images/king.png' style='height:200px')
           .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
+            h5.card-title 롯데버거
+            p.card-text 4000원
             .edit
               a.btn.btn-primary(href='#') 삭제
               a.btn.btn-primary(href='#') 수정
-
-        .card
-          img.card-img-top(src='../images/king.png' style='height:200px')
-          .card-body
-            h5.card-title 불고기 버거
-            p.card-text 4000월
-            .edit
-              a.btn.btn-primary(href='#') 삭제
-              a.btn.btn-primary(href='#') 수정
-
           
       a(href="/plus")
         .plus-box
           img.plus-img(src="../images/plus.png")
           img.plus-txt(src="../images/Group.png")
+
+      script.
+        $(".box").append("
+        <div class="card"><img class="card-img-top" src="../images/king.png" style="height:200px"> <div class="card-body"> <h5 class="card-title"> </h5><p class="card-text"> <div class="edit"><a class="btn btn-primary" href="#"></a><a class="btn btn-primary" href="#"></a></div></p></div></div>")
+
