--- a/views/plus.pug
+++ b/views/plus.pug
@@ -10,7 +10,8 @@ block content
       input.menu(type="text" name='title' id='title' placeholder='메뉴 이름 입력')
       input.menu(type="number" name='message' id='message' placeholder='메뉴 가격 입력')
     
-    button.add(type='button' id='upload') uplode
+    a(href='/')
+      button.add(type='button' id='upload') uplode
 
 
 
