--- a/views/shop.pug
+++ b/views/shop.pug
@@ -7,6 +7,7 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
   body
     block content
+
       .box
         .logobox
           img#logo(src="../images/logo2.png")
@@ -18,12 +19,30 @@ html
                 .name 버거
                 .price 17000원
             .hi
+              .burgerbox
+                img.po(src="../images/king.png")
+                .name 싸이버거
+                .price 17000원
             .hi
+              .burgerbox
+                img.po(src="../images/king.png")
+                .name 불고기버거
+                .price 17000원
             .hi
+              .burgerbox
+                img.po(src="../images/king.png")
+                .name 새우버거
+                .price 17000원
             .hi
+              .burgerbox
+                img.po(src="../images/king.png")
+                .name 킹버거
+                .price 17000원
             .hi
-            .hi
-            .hi
+              .burgerbox
+                img.po(src="../images/king.png")
+                .name 롯데버거
+                .price 17000원
 
 
         .cart
@@ -34,13 +53,26 @@ html
               p.color 17000
           .bottom
             ul.show
-              li.cartshow
-              li.cartshow
-              li.cartshow
-              li.cartshow
-              li.cartshow
           
         .btnnn
           a(href="/") 
             button.cb.cancel 취소
             button.cb.cash 결제
+
+      script.
+        const menu = document.getElementsByClassName("hi");
+        console.log(menu);
+
+        function addMenu () {
+          const show = document.querySelector("ul.show");
+          const li = document.createElement("li");
+          li.classList.add("cartshow");
+          const name = menu[0].getElementsByClassName("name");
+          console.log(name);
+          li.innerText = name[0].innerText;
+          show.appendChild(li); 
+          
+        }
+
+        menu[0].addEventListener("click", addMenu);
+
